Sun Oct 16 14:30:05 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb (Rinda::Tuple#initialize): check remote hash
	  tuple. fixed: [ruby-list:41227]

	* test/rinda/test_rinda.rb: test it.

Sat Oct 15 19:56:38 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* bin/erb: typo fixed, again. thanks, Doug Kearns.

Fri Oct 14 22:08:26 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (ioctl): should set errno.

Fri Oct 14 16:57:32 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/config.rb (Config::FileHandler): :UserDir should be nil.
	  It is harmful to permit the access to ~/public_html by default.
	  suggested by Hiroyuki Iwatsuki.

Thu Oct 13 23:29:51 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (HEAPCNT): bison allocates indivisible size.
	  fixed: [ruby-core:06261]

	* io.c, pack.c, ext/syck/rubyext.c, ext/syck/syck.h, missing/isinf.c:
	  get rid of warnings.  fixed: [ruby-core:06247]

Wed Oct 12 12:52:57 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl.c (Init_openssl): should call
	  OpenSSL_add_ssl_algorithms().

Wed Oct 12 11:08:54 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_f_test): typo in RDoc comments.

Tue Oct 11 21:41:58 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_obj_respond_to): check if obj responds to the given
	  method with the given visibility.  [ruby-dev:27408]

	* eval.c (rb_respond_to): conform to Object#respond_to?.  [ruby-dev:27411]

Sat Oct  8 20:04:40 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (Init_Binding): add Binding#dup method.  [yarv-dev:666]

	* parse.y (rb_parser_malloc, rb_parser_free): manage parser stack on
	  heap.  [ruby-list:41199]

	* ext/iconv/charset_alias.rb: parse config.charset_alias file directly.

Fri Oct  7 09:54:00 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::Cookie::parse): Cookies from Nokia devices may
	  not be parsed correctly.  A patch from August Z. Flatby